slow but steady, homework is mostly done

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
             <h1 class= "navbar-info">
                 Javascript Quiz
             </h1>
-            <h3 class="timer">timer goes here</h3>
+            <h3 class="timer"></h3>
         </nav>  
         <section class="contain">
             <div class="main">
-                <p>Welcome to a Javascript quiz, where we text weather or not I can code and at least type half decently </p>
+                <p id="question">Welcome to a Javascript quiz, where we text weather or not I can code and at least type half decently </p>
                 <p>you have no idea how long it took me to make the text above</p>
             </div>
-            <div>
+            <div class="buttons">
                 <button class="btn btn-content" value="0" ></button>
                 <button class="btn btn-content" value="1"></button>
                 <button class="btn btn-content" value="2"></button>
                 <button class="btn btn-content" value="3"></button>
             </div>
             <div class="next">
-                <button class="btn" id="start-button ">start</button>
-                <button class="btn" id="next-button ">next</button>
+                <button class="btn" id="start-button">start</button>
+                <button class="btn" id="next-button">next</button>
             </div>
         </section>
         <footer class="foot">
@@ -32,6 +32,7 @@
                 this is just here for fun lol
             </p>
         </footer> 
+        <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <script src="json.js"></script>
     </body>
 </html>
