--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
             <h1 class= "navbar-info">
                 Javascript Quiz
             </h1>
-            <h3 class="timer"></h3>
         </nav>  
-        <section class="contain">
-            <div class="main">
+        <h3 class="timer">00:00</h3>
+        <section class="contain" id="quiz">
+            <!-- <div class="main">
                 <p id="question">Welcome to a Javascript quiz, where we text weather or not I can code and at least type half decently </p>
-                <p>you have no idea how long it took me to make the text above</p>
+                <p id="hide">you have no idea how long it took me to make the text above</p>
+            </div> -->
+            <div class="questions">
+                <!-- <button class="btn btn-content" id="btn0" ><span id="choice0"></span></button>
+                <button class="btn btn-content" id="btn1"><span id="choice1"></span></button>
+                <button class="btn btn-content" id="btn2"><span id="choice2"></span></button>
+                <button class="btn btn-content" id="btn3"><span id="choice3"></span></button> -->
             </div>
-            <div class="buttons">
-                <button class="btn btn-content" value="0" ></button>
-                <button class="btn btn-content" value="1"></button>
-                <button class="btn btn-content" value="2"></button>
-                <button class="btn btn-content" value="3"></button>
-            </div>
-            <div class="next">
+            <!-- <div class="next"> -->
                 <button class="btn" id="start-button">start</button>
-                <button class="btn" id="next-button">next</button>
-            </div>
+                <!-- <button class="btn" id="next-button">next</button>
+            </div> -->
         </section>
         <footer class="foot">
             <p class="footer-text">
